--- a/client/src/components/kiosk.scss
+++ b/client/src/components/kiosk.scss
@@ -3,7 +3,13 @@
     flex-direction: row;
     justify-content: space-around;
     height: 100vh;
-    margin: 10rem 5rem 10rem 5rem;
+    margin: 4rem 5rem 10rem 5rem;
+}
+
+
+.logout{
+    margin-left: 90%;
+    margin-top: 2%;
 }
 
 .card__container{
@@ -15,6 +21,16 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+
+        &--button{
+            background-color: #F16522;
+            border-radius: 10px;
+            border: none;
+            padding: 1rem;
+            width: 10rem;
+            font-weight: bold;
+            color: white;
+        }
     }
    
     &-cards{
@@ -31,7 +47,8 @@
         border-radius: 50%;
         height: 180px;
         width: 180px;
-        margin-top: 2rem;
+        margin-top: 3rem;
+        margin-bottom: 1.5rem;
     }
 
     &-code{
