--- a/client/src/components/kiosk.scss
+++ b/client/src/components/kiosk.scss
@@ -1,3 +1,8 @@
+*{
+    max-height: 100vh;
+    overflow-y: hidden; // hide vertical
+
+}
 .flexbox{
     display: flex;
     flex-direction: row;
@@ -16,6 +21,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 2rem;
+    width: 60%;
 
     &-buttons{
         display: flex;
