--- a/client/src/components/kioskcard.scss
+++ b/client/src/components/kioskcard.scss
@@ -5,6 +5,7 @@
     border: 1px solid black;
     padding: 2rem 2rem 2rem 2rem;
     width: 30%;
+    flex-wrap: wrap;
     text-align: center;
     border-radius: 10%;
     box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
