--- a/client/src/components/kiosk.scss
+++ b/client/src/components/kiosk.scss
@@ -8,7 +8,7 @@
     flex-direction: row;
     justify-content: space-around;
     height: 100vh;
-    margin: 4rem 5rem 10rem 5rem;
+    margin: 2rem 2rem 0rem 2rem;
 }
 
 
@@ -20,8 +20,10 @@
 .card__container{
     display: flex;
     flex-direction: column;
-    margin-top: 2rem;
+    justify-content: flex-start;
+    margin-top: 0rem;
     width: 60%;
+    max-height: 100vh;
 
     &-buttons{
         display: flex;
@@ -42,19 +44,33 @@
     &-cards{
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
-        margin-top: 5rem;
-        margin-bottom: 5rem;
+        flex-wrap: wrap;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        width: 100%;
     }
 }
 
 .image__container{
+    width: 250px;
+    background-color: rgb(225, 232, 242);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 500px;
     &-image{
         border-radius: 50%;
         height: 180px;
         width: 180px;
         margin-top: 3rem;
         margin-bottom: 1.5rem;
+    }
+
+    &-list{
+        display: flex;
+        flex-direction: row;
+        font-size: 12pt;
+        justify-content: space-between;
     }
 
     &-code{
