--- a/client/src/components/kioskcard.scss
+++ b/client/src/components/kioskcard.scss
@@ -1,12 +1,20 @@
-.cardbox{
+.kioskcardbox{
     display: flex;
     flex-direction: column;
     justify-content: center;
     border: 1px solid black;
-    padding: 2rem 2rem 2rem 2rem;
-    width: 30%;
+    text-align: center;
+    padding: 1rem 1rem 1rem 1rem;
+    width: 120px;
+    height: 150px;
+    margin: 0 1rem 2rem 1rem;
     flex-wrap: wrap;
     text-align: center;
     border-radius: 10%;
     box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
+
+    &__image{
+        width: 100%;
+        border-radius: none;
+    }
 }
