--- a/client/src/components/ListCards.scss
+++ b/client/src/components/ListCards.scss
@@ -1,5 +1,12 @@
-.needed{
+.listcard__needed{
     width: 60px;
     text-align: center;
-    margin-top: 1rem;
+    margin: 0 0.5rem 0rem 0.5rem;
+    font-size: 0.8rem;
+}
+
+.listcard__image{
+    width: 80%;
+    height: 40%;
+    margin: 0 0.5rem 0rem 0.5rem;
 }
