--- a/client/src/components/kioskcard.scss
+++ b/client/src/components/kioskcard.scss
@@ -1,20 +1,31 @@
-.kioskcardbox{
+.kioskcard{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     border: 1px solid black;
-    text-align: center;
-    padding: 1rem 1rem 1rem 1rem;
     width: 120px;
-    height: 150px;
+    height: 170px;
     margin: 0 1rem 2rem 1rem;
     flex-wrap: wrap;
     text-align: center;
-    border-radius: 10%;
+    border-radius: 2%;
+    overflow: hidden;
     box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
 
     &__image{
-        width: 100%;
-        border-radius: none;
+        display: block;
+        width: 120px;
+        overflow: hidden;
+    }
+
+    &__bottom{
+        &-category{
+            font-weight: bold;
+        }
+        &-funds{
+            font-weight: bold;
+            font-size: 2rem;
+        }
     }
 }
+
